[project]
name = "rllr"
version = "0.1.0"
description = "High-level reinforcement control"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "gym==0.22.0",
    "atari-py==0.2.6",
    "ale-py==0.7.4",
    "numpy==1.21.3",
    "torch==1.10.1",
    "torchvision==0.11.2",
    "opencv-python>=3",
    "gym-minigrid==1.0.2",
    "matplotlib>=3.4.1",
    "pyhocon>=0.3.57",
    "stable-baselines3",
    "scipy",
    "tqdm",
]

[dependency-groups]
dev = [
    "pylint",
    "jupyter",
    "tensorboard",
    "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = [
    "tests"
]
